--- a/bcd.qsf
+++ b/bcd.qsf
@@ -515,4 +515,6 @@ set_global_assignment -name QIP_FILE pll.qip
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_FILE top.vhd
+set_global_assignment -name QIP_FILE lpm_counter0.qip
+set_global_assignment -name VHDL_FILE seleciona.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
